# Laserspectravue

./: CMakeLists.txt  README.md  appicon.rc  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
